--- a/QA/deployment.yaml
+++ b/QA/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: myapp
-  replicas: 4
+  replicas: 10
   template:
     metadata:
       labels:
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nginx
+        image: httpd
         ports:
         - containerPort: 8080
